feat: search functionality
